Fase one,  base project
