# routes/index.js
@@ -7,6 +7,12 @@ router.use("/", require("./swagger"));
 router.use("/users", require("./users"));
 //router.use("/tasks", require("./tasks"));
 //router.use("/goals", require("./goals"));
+router.use("/balance", require("./balance"));
+router.use("/transactions", require("./transactions"));
+router.use("/accounts", require("./account"));
+router.use("/reverses", require("./reverses"));
+router.use("/address", require("./address"));
+
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
 
